--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="register">Register</string>
     <string name="account">Already have an account?</string>
+    <string name="addcart">Cart</string>
+    <string name="add_cart">Cart</string>
+    <string name="refresh">Refresh</string>
+    <string name="sign_out">Sign out</string>
 </resources>
